<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:visibility="visible"
    app:cardCornerRadius="0dp"
    app:cardElevation="4dp"
    tools:ignore="UseCompoundDrawables">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profileLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/uPictureIv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:foreground="@color/overlay_light_20"
                android:src="@drawable/profile"
                app:civ_border="false"
                app:civ_shadow="true"
                app:civ_shadow_radius="0"
                tools:targetApi="m" />

            <View
                android:layout_width="15dp"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/uNameTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/homer_j_allen"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_90"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pTimeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end|right"
                    android:text="@string/_12h_ago"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_40"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/moreBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_more_vert_black_24dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/pDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/short_lorem_ipsum"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/grey_60"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/pImageIv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pLike"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_45_likes" />

            <TextView
                android:id="@+id/pCommentTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/_12_comments"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/likeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_thumb_up_black"
                android:text="@string/link"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/commentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_comment_black_24dp"
                android:text="@string/comments"
                android:textAlignment="center"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/shareBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_share"
                android:text="@string/share"
                android:textAlignment="center"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
