<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ChatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_chat"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/userStatusTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/online"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>
            <ImageView
                android:layout_marginEnd="5dp"
                android:id="@+id/blockIv"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_circle_black_24dp"/>
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@id/toolbar_chat"
        android:id="@+id/chat_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/box_chat"/>


    <LinearLayout
        android:id="@+id/box_chat"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/attachBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:src="@drawable/ic_attach_file_black_24dp"/>
        <EditText
            android:id="@+id/messageEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/start_typing"
            android:inputType="textCapSentences|textMultiLine"
            android:background="@null"
            android:padding="15dp" />

        <ImageButton
            android:id="@+id/sendBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_send"
            android:background="@null"/>
    </LinearLayout>
</RelativeLayout>